--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,6 +8,7 @@
 @import "carousel";
 @import "articles";
 @import "calendar";
+@import "articles-slideshow";
 @import "sidebar";
 @import "annuaire";
 @import "evenements";
