--- a/src/css/_responsive.scss
+++ b/src/css/_responsive.scss
@@ -375,6 +375,24 @@
       width: 100%;
     }
   }
+
+  .article-slideshow{
+    .slide-image{
+      margin-bottom: 50px;
+    }
+
+    .controls{
+      span{
+        width: 60px;
+        height: 60px;
+        top: 30%;
+      }
+      &:after,
+      &:before{
+        font-size: 25px;
+      }
+    }
+  }
 }
 
 @media (max-width: 560px){
@@ -522,6 +540,21 @@
 
     .footer{
       margin-top: 25px;
+    }
+  }
+
+  .article-slideshow{
+
+    .controls{
+      span{
+        width: 35px;
+        height: 35px;
+        top: 25%;
+      }
+      &:after,
+      &:before{
+        font-size: 18px;
+      }
     }
   }
 }
