Updates: - Formulaire inscriptions

--- a/src/css/_animations.scss
+++ b/src/css/_animations.scss
@@ -101,4 +101,22 @@
     border-color: rgba($orange,0.7);
   }
 }
+@keyframes gradientFontColor {
+  0%{
+    color: rgba($blue,0.8);
+    border-color: rgba($blue,0.8);
+  }
+  40%{
+    color: rgba($blue,0.8);
+    border-color: rgba($blue,0.8);
+  }
+  60%{
+    color: rgba($orange,0.7);
+    border-color: rgba($orange,0.7);
+  }
+  100%{
+    color: rgba($orange,0.7);
+    border-color: rgba($orange,0.7);
+  }
+}
 
