--- a/src/css/_articles.scss
+++ b/src/css/_articles.scss
@@ -519,6 +519,136 @@
     }
   }
 }
+.formulaire-ateliers{
+  position: relative;
+  min-height: 300px;
+  margin: 30px 0 100px;
+  h2{
+    color: $orange;
+    border-bottom: solid 2px $light_gray;
+    padding-bottom: 10px;
+  }
+  .form-section-1,
+  .form-section-2{
+    position: absolute;
+    z-index: 1;
+    min-height: 100%;
+    padding: 20px;
+    top: 60px;
+    @include  transition(0.3s);
+  }
+  .form-section-1{
+    background-color: #f8f8f8;
+    width: 50%;
+    z-index: 2;
+    left: 0;
+  }
+  .form-section-2{
+    background-color: #f8f8f8;
+    border: solid 5px $orange;
+    width: 50%;
+    display: none;
+
+    .button-group{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 15px;
+      button{
+        height: 40px;
+        width: 18%;
+        display: inline-block;
+        border: solid 2px $orange;
+        background-color: #fff;
+        @include transition(0.3s);
+
+        &:hover{
+          border-color: $blue;
+        }
+        &.active,
+        &.active:hover{
+          background-color: $orange;
+          border-color: $orange;
+          color: #fff;
+        }
+      }
+    }
+  }
+  .details-enfants{
+    margin-bottom: 10px;
+    .detail-enfant{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      padding: 15px 0;
+       border-bottom: solid 1px #e2e2e2;
+    }
+    h5{
+      font-weight: 700;
+      margin: 0;
+    }
+    .select-input{
+      display: inline-block;
+      padding: 8px;
+      min-height: 30px;
+      border: solid 2px #c2c2c2;
+
+      &:first-child{
+        width: 30%;
+      }
+      &:last-child{
+        width: 65%;
+      }
+    }
+  }
+  .form-section-2.visible{
+    display: block;
+    left: 50%;
+    @include animation(revealFormSection2 0.5s linear);
+  }
+
+  h3{
+    font-family: $fontTitle;
+    margin-top: 0;
+  }
+  label{
+    display: block;
+    font-weight: normal;
+  }
+  .form-input{
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 0 10px;
+    border: none;
+  }
+  #form-section-2-trigger{
+    position: relative;
+    background: $blue;
+    display: block;
+    width: 100% !important;
+    padding: 8px;
+    border: none;
+    margin-top: 20px;
+    color: #fff;
+
+    &:after{
+      content: '\f105';
+      font-family: FontAwesome, sans-serif;
+      position: absolute;
+      right: 15px;
+    }
+  }
+  button[type = submit]{
+    display: block;
+    width: 100%;
+    height: 35px;
+    border: none;
+    background-color: $orange;
+    color: #fff;
+    margin-top: 20px;
+  }
+}
 #uploaded-photo{
   img{
     display: block;
