--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -81,9 +81,9 @@ header{
   margin-top: 80px;
   @include transition(0.3s);
 
-  .container{
+ /* .container{
     width: auto;
-  }
+  }*/
 
   ul{
     list-style: none;
@@ -96,6 +96,7 @@ header{
   }
 
   .main-menu{
+    position: relative;
     li{
       display: inline-block;
       vertical-align: top;
@@ -163,12 +164,92 @@ header{
       }
     }
   }
+  .sub-menu-lv2{
+    position: relative;
+    width: 100%;
+  }
 
   @media (min-width: 992px) {
     .sub-menu:hover > ul{
       display: block;
       animation: navSlideDown 0.3s 1;
     }
+    .sub-menu-lv2 > ul{
+      display: block;
+      position: absolute;
+      right: 100%;
+    }
+  }
+}
+
+//MegaMenu
+.megamenu{
+  display: none;
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  left: 0;
+  background-color: #fff;
+  padding: 25px 15px 15px 15px;
+  box-shadow: 0 0 3px #9aa8af;
+}
+.megamenu-parent{
+  position: initial !important;
+}
+@media (min-width: 992px) {
+  .megamenu-parent:hover>.megamenu{
+    animation: navSlideDown 0.3s 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+}
+
+.megamenu-col{
+  width: 30%;
+}
+.megamenu-image-link{
+  text-align: center;
+  display: block;
+  width: 100%;
+  padding-bottom: 5px;
+  @include transition(0.3s);
+
+  &:hover{
+    box-shadow: 0 3px $orange;
+  }
+  img{
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .label{
+    color: $gray;
+    font-family: $fontTitle;
+    font-size: 18px;
+    font-weight: normal;
+  }
+}
+.sub-category-parent{
+  font-family: $fontTitle;
+  color: $gray;
+  font-size: 19px;
+  border-bottom:  solid 1px $orange;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+}
+.sub-category-children{
+  a{
+    display: block;
+    padding: 6px 0 5px;
+    color: $gray;
+    font-family: $fontMain;
+    min-width: 250px;
+    border-bottom: solid 1px transparent;
+    @include transition(0.3s);
+  }
+  a:hover{
+    border-color: $orange;
   }
 }
 
