--- a/src/css/_responsive.scss
+++ b/src/css/_responsive.scss
@@ -98,14 +98,69 @@
       height: 43px;
       overflow: hidden;
       @include transition(0.3s);
-      ul{
+      ul,.megamenu{
         display: block;
         position: relative;
         background: none;
       }
+
+      .megamenu{
+        box-shadow: none;
+        padding: 0;
+        .megamenu-col{
+          width: 100%;
+        }
+      }
     }
   }
+  .megamenu-image-link{
+    text-align: left;
+    padding:6px 0 5px;
+    @include transition(0.3s);
 
+    &:hover{
+      box-shadow: none;
+    }
+    img{
+      display: none;
+    }
+    .label{
+      color: $gray;
+      font-family: $fontMain;
+      font-size: 15px;
+      padding: 6px 0 5px;
+    }
+  }
+  .sub-category-parent{
+    font-family: $fontTitle;
+    color: $gray;
+    font-size: 16px;
+    border-bottom:  solid 1px $light_gray;
+    padding: 6px 0 5px;
+    margin-bottom: 5px;
+  }
+  .sub-category-children{
+    a{
+      display: block;
+      padding: 6px 0 5px 15px;
+      color: $gray;
+      font-family: $fontMain;
+      min-width: 250px;
+      border-bottom: solid 1px transparent;
+      position: relative;
+      @include transition(0.3s);
+      &:before{
+        content: "\f105";
+        font-family: FontAwesome, sans-serif;
+        position: absolute;
+        left: 0;
+        color: #c3c3c3;
+      }
+    }
+    a:hover{
+      border-color: $orange;
+    }
+  }
   .nav-menu.visible {
     @include transform(translate(100%, 0));
   }
